# 2D_PD_GPU

./: CMakeLists.txt  build_log.txt  code_mismatch_analysis.txt  comprehensive_shape_tensor_analysis.txt  cpu_duplicate_analysis.txt  cpu_duplicate_locations.txt  cpu_full_debug_output.txt  cpu_full_output.txt  cpu_pair_debug.txt  cpu_shape_pairs.txt  cpu_velocity_double_call_analysis.txt  cpu_velocity_pairs.txt  final_analysis_results.txt  final_comparison_report.txt  final_shape_tensor_summary.txt  gpu_corrected_output.txt  gpu_debug_output.txt  gpu_full_debug_output.txt  gpu_full_output.txt  gpu_pair_debug.txt  gpu_shape_pairs.txt  gpu_velocity_pairs.txt  p1_cpu_log.txt  pair_comparison_report.txt  seq_output.txt  setup_env.sh  shape_tensor_comparison.txt
include/: SetupParticleSystem.h  mechanics.cuh  mechanics.h  util.h
output/: 2D_Hassa_test_output  2D_Hassa_test_output_ref  LocalParticlesPositions_rank_0step_0.txt  cpu_output.txt  gpu_output.txt  rank_0_particle_positions_step_0.txt  rank_0_particle_positions_step_0_ref.txt  velocity_step_0_after.txt  velocity_step_0_after_cuda.txt  velocity_step_0_after_ref.txt  velocity_step_0_after_seq_ref.txt  velocity_step_0_before.txt
src/: SetupParticleSystem.cpp  main.cpp  main.cu  main_seq.cpp  mechanics.cpp  mechanics.cuh
test/: cuda_test  cuda_test.cu
